force-app/main/default/objects/Proof_of_Delivery__c/Proof_of_Delivery__c.object-meta.xml
<CustomObject>
    <label>Proof of Delivery</label>
    <pluralLabel>Proofs of Delivery</pluralLabel>
    <nameField>
        <displayFormat>POD-{00000}</displayFormat>
        <label>Proof of Delivery Number</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>