force-app/main/default/objects/Proof_of_Delivery__c/fields/Confirmation_Status__c.field-meta.xml
<CustomField>
    <fullName>Confirmation_Status__c</fullName>
    <label>Confirmation Status</label>
    <type>Picklist</type><valueSet><valueSetDefinition><sorted>false</sorted><value><fullName>Confirmed</fullName><default>true</default><label>Confirmed</label></value><value><fullName>Rejected</fullName><default>false</default><label>Rejected</label></value><value><fullName>Pending</fullName><default>false</default><label>Pending</label></value></valueSetDefinition></valueSet>
</CustomField>