force-app/main/default/objects/Proof_of_Delivery__c/fields/Confirmation_Type__c.field-meta.xml
<CustomField>
    <fullName>Confirmation_Type__c</fullName>
    <label>Confirmation Type</label>
    <type>Picklist</type><valueSet><valueSetDefinition><sorted>false</sorted><value><fullName>Signature</fullName><default>true</default><label>Signature</label></value><value><fullName>OTP</fullName><default>false</default><label>OTP</label></value><value><fullName>Photo</fullName><default>false</default><label>Photo</label></value><value><fullName>Name Confirmation</fullName><default>false</default><label>Name Confirmation</label></value><value><fullName>Other</fullName><default>false</default><label>Other</label></value></valueSetDefinition></valueSet>
</CustomField>