force-app/main/default/objects/Proof_of_Delivery__c/fields/Delivery_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Remarks__c</fullName>
    <label>Delivery Remarks</label>
    <type>LongTextArea</type><length>32768</length><visibleLines>5</visibleLines>
</CustomField>