force-app/main/default/objects/Proof_of_Delivery__c/fields/Delivery_Status__c.field-meta.xml
        <CustomField>
            <fullName>Delivery_Status__c</fullName>
            <label>Delivery Status</label>
            <type>Picklist</type><valueSet><valueSetDefinition><sorted>false</sorted><value><fullName>Delivered</fullName><default>false</default><label>Delivered</label></value>
<value><fullName>Rejected</fullName><default>false</default><label>Rejected</label></value>
<value><fullName>Partial Delivery</fullName><default>false</default><label>Partial Delivery</label></value></valueSetDefinition></valueSet>
        </CustomField>