force-app/main/default/objects/Proof_of_Delivery__c/fields/Receiver_Name__c.field-meta.xml
<CustomField>
    <fullName>Receiver_Name__c</fullName>
    <label>Receiver Name</label>
    <type>Text</type><length>255</length>
</CustomField>