force-app/main/default/objects/Proof_of_Delivery__c/fields/Recorded_By__c.field-meta.xml
<CustomField>
    <fullName>Recorded_By__c</fullName>
    <label>Recorded By</label>
    <type>Lookup</type><referenceTo>User</referenceTo><relationshipLabel>Recorded By</relationshipLabel><relationshipName>Recorded_By</relationshipName>
</CustomField>