force-app/main/default/objects/Proof_of_Delivery__c/fields/Shipment__c.field-meta.xml
<CustomField>
    <fullName>Shipment__c</fullName>
    <label>Shipment</label>
    <type>MasterDetail</type><referenceTo>Shipment__c</referenceTo><relationshipLabel>Shipment</relationshipLabel><relationshipName>Shipment</relationshipName><reparentableMasterDetail>false</reparentableMasterDetail>
</CustomField>